--- a/src/main/APS2/syntaxe/Makefile
+++ b/src/main/APS2/syntaxe/Makefile
@@ -2,8 +2,9 @@ LEX_ML = ocamllex
 YACC_ML = /usr/local/bin/ocamlyacc
 OCAMLC = ocamlc
 
-toProlog: parser toProlog.ml
+toProlog: parser toProlog.ml eval.ml
 	$(OCAMLC) -o toProlog ast.cmo lexer.cmo parser.cmo toProlog.ml
+	$(OCAMLC) -o eval ast.cmo lexer.cmo parser.cmo eval.ml
 
 parser: ast.ml lexer.mll parser.mly
 	$(OCAMLC) -c ast.ml
@@ -12,6 +13,7 @@ parser: ast.ml lexer.mll parser.mly
 	$(OCAMLC) -c parser.mli
 	$(OCAMLC) -c lexer.ml
 	$(OCAMLC) -c parser.ml
+	$(OCAMLC) -c eval.ml
 
 clean:
 	rm -f *.cmo
@@ -20,3 +22,4 @@ clean:
 	rm -f lexer.ml
 	rm -f parser.mli
 	rm -f parser.ml
+	rm -f eval
