--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-src/main/syntaxe/*.cmi
-src/main/syntaxe/*.cmo
-src/main/syntaxe/*.mli
-src/main/syntaxe/lexer.ml
-src/main/syntaxe/parser.ml
-src/main/syntaxe/toProlog
-
-
+src/main/*/syntaxe/*.cmi
+src/main/*/syntaxe/*.cmo
+src/main/*/syntaxe/*.mli
+src/main/*/syntaxe/lexer.ml
+src/main/*/syntaxe/parser.ml
+src/main/*/syntaxe/toProlog
