--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
-src/main/APS*/syntaxe/*.cmi
-src/main/APS*/syntaxe/*.cmo
-src/main/APS*/syntaxe/*.mli
-src/main/APS*/syntaxe/lexer.ml
-src/main/APS*/syntaxe/parser.ml
-src/main/APS*/syntaxe/toProlog
+src/main/APS1/syntaxe/*.cmi
+src/main/APS1/syntaxe/*.cmo
+src/main/APS1/syntaxe/*.mli
+src/main/APS1/syntaxe/lexer.ml
+src/main/APS1/syntaxe/parser.ml
+src/main/APS1/syntaxe/toProlog
+
+src/main/APS2/syntaxe/*.cmi
+src/main/APS2/syntaxe/*.cmo
+src/main/APS2/syntaxe/*.mli
+src/main/APS2/syntaxe/lexer.ml
+src/main/APS2/syntaxe/parser.ml
+src/main/APS2/syntaxe/toProlog
+
+src/main/APS3/syntaxe/*.cmi
+src/main/APS3/syntaxe/*.cmo
+src/main/APS3/syntaxe/*.mli
+src/main/APS3/syntaxe/parser.ml
+src/main/APS3/syntaxe/lexer.ml
+src/main/APS3/syntaxe/toProlog
